applications/vanille-shop-wawi/traefik-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sticky
spec:
  sticky:
    cookie:
      name: nginx-session
      httpOnly: true
      secure: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors
spec:
  headers:
    accessControlAllowOriginList:
      - "*"
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowHeaders:
      - "*"
    accessControlAllowCredentials: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: buffering
spec:
  buffering:
    maxRequestBodyBytes: 10737418240  # 10GB
---
