applications/vanille-shop-wawi/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wawi
  name: wawi-deployment
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: wawi
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wawi
    spec:
      containers:
      - args:
        - -jar
        - -Dlogging.config=/logback-spring.xml
        - /app.war
        command:
        - java
        image: harbor.hachmann.hamburg/vanilleshop/wawi:1.7.6
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /health
            port: 9080
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 1
          successThreshold: 1
          timeoutSeconds: 5
        name: wawi
        ports:
        - containerPort: 9080
          protocol: TCP
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /health
            port: 9080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 1
          successThreshold: 1
          timeoutSeconds: 5
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /logback-spring.xml
          name: logback-config-volume
          subPath: logback.xml
        - mountPath: /var/wawi-files
          name: file-volume
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: private-docker-registry-secret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: file-volume
        persistentVolumeClaim:
          claimName: vs-document-pvc
      - configMap:
          defaultMode: 420
          name: vanilleshop-logback-config
        name: logback-config-volume
