applications/vanille-shop-wawi/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: wawi
  namespace: ${TARGET_NAMESPACE}
spec:
  selector:
    app: wawi
  type: ClusterIP
  ports:
  - port: 9080
    protocol: TCP
    targetPort: 9080
